# ArDVRC

./: .gitignore  README.md
data/data_generation/: README.txt  background_shapes.py  data_analysis.py  data_analysis_occlusion.py  data_generator.py  decreased_lighting.py  generate_figures.py  identification_analysis_occlusion.py  motion_blur.py  noise.py  occluding_edge_ellipse.py  synthetic_data_figure.py
data/entropy_dictionary/: DICT_4X4_64_ENTROPY.npy  README.txt  generate_entropy_dictionary.py
include/: ArDVRC.h  ArDVRCBase.h  aruco_functions.h  npy.hpp
source/ardvrc_examples/: ardvrc_examples.sln
source/ardvrc_examples/ardvrc_aruco_comparison/: ardvrc_aruco_comparison.cpp  ardvrc_aruco_comparison.vcxproj  ardvrc_aruco_comparison.vcxproj.filters
source/ardvrc_examples/image_example/: image_example.cpp  image_example.vcxproj  image_example.vcxproj.filters
source/ardvrc_examples/video_example/: video_example.cpp  video_example.vcxproj
source/examples/image_example/: CMakeLists.txt  README.md  image_example.cpp
source/examples/video_example/: CMakeLists.txt  README.md  video_example.cpp
source/tests/ardvrc_aruco_comparison/: CMakeLists.txt  ardvrc_aruco_comparison.cpp
source/video_example/: video_example.sln
source/video_example/video_example/: video_example.cpp  video_example.vcxproj.filters
